# VALX

./: .gitmodules  CMakeLists.txt
api/: Buffer.h  CommandBuffer.h  Context.cpp  Context.h  Format.cpp  Format.h  Hash.h  Logger.cpp  Logger.h  Sampler.h  Shader.h  ShaderLoader.h  ShaderStage.h  Surface.h  SwapChain.h  Texture.h  TextureLoader.cpp  TextureLoader.h  TextureType.h  Utilities.h
backend/vulkan/: ExternalFunctions.cpp  ExternalFunctions.h  Utilities.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanFormat.cpp  VulkanFormat.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderLoader.cpp  VulkanShaderLoader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h
examples/dummy/: CMakeLists.txt  EntryPoint.cpp  main_fragment.spv  main_vertex.spv
window/: Window.cpp  Window.h
window/vulkan/: VulkanSurface.cpp  VulkanSurface.h
